[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "yardang"
authors = [
    {name = "the yardang authors", email = "t.paine154@gmail.com"},
]
description = "Easily generate sphinx documentation"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.5.0"
requires-python = ">=3.10"
keywords = [
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "autodoc-pydantic",
    "furo",
    "myst-nb",
    "packaging",
    "rich",
    "sphinx>=7.2.6,<9",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib-mermaid>=2.0.0rc0,<2.1",
    "sphinx-reredirects",
    "toml",
    "typer",
]

[project.optional-dependencies]
breathe = [
    "breathe>=4.35.0",
]
rust = [
    "sphinx-rust",
]
js = [
    "sphinx-js>=5.0.0",
]
wiki = [
    "sphinx-markdown-builder>=0.6.9",

]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "codespell",
    "hatchling",
    "mdformat",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
    # Extensions
    "breathe>=4.35.0",
    "sphinx-rust",
    "sphinx-js>=5.0.0",
    "sphinx-markdown-builder>=0.6.9",
]

[project.scripts]
yardang = "yardang.cli:main"

[project.urls]
Repository = "https://github.com/python-project-templates/yardang"
Homepage = "https://github.com/python-project-templates/yardang"

[tool.bumpversion]
current_version = "0.5.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "yardang/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.coverage.run]
branch = true
omit = [
    "yardang/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = [
    "yardang",
]
exclude = [
    "docs/*",
    "examples/*",
]

[tool.hatch.build.targets.wheel]
packages = [
    "yardang",
]
exclude = [
    "docs/*",
    "examples/*",
]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "yardang/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "yardang",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]

[tool.yardang]
root = "docs/src/home.md"
cname = "yardang.python-templates.dev"
pages = [
    "docs/src/overview.md",
    "docs/src/installation.md",
    "docs/src/configuration.md",
    "docs/src/api.md",
]
use-autoapi = false

[tool.yardang.breathe]
projects = { calculator = "examples/cpp/xml" }
default-project = "calculator"

[tool.yardang.sphinx-rust]
crates = [
    "examples/rust",
]
doc-formats = { calculator = "myst-nb" }

[tool.yardang.sphinx-js]
js-language = "javascript"
js-source-path = "examples/js/src"

[tool.yardang.wiki]
enabled = true
output-dir = "docs/wiki"
generate-sidebar = true
generate-footer = true
footer-docs-url = "https://yardang.python-templates.dev"
footer-repo-url = "https://github.com/python-project-templates/yardang"
markdown-flavor = "github"
